hackohio/static/css/style.css
body {
    color: #eee;
}

.bg {
    background: #111 url("../img/wallpaper.png") center;
    position: fixed;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
}

.glowypanel {
    position: fixed;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
}

.topbar {
    background: #333;
    box-shadow: 0px 0px 5px #333;
}

.title {
    font-size: 22px;
}

.menubtn {
    float: right;
    vertical-align: middle;
}

.songpanel-container {
    position: fixed;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.songpanel {
    margin: auto;
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.7);
    border-radius: 10px;
    mix-blend-mode: normal;
}

.songinfo {
    float: left;
}

.songinfotable {
    margin: 5px;
}

.songinfotextcol {
    float: left;
    display: flex;
    align-items: center;
}

.slider-handle {
	background-color: #0ce3ac;
	background-image: none;
}

.slider-track {
    background-image: none;
    background-color: #444;
}

.slider-selection {
    background-image: none;
    background-color: #444;
}

.slider {
    margin-left: 10px;
    margin-right: 20px;
    margin-top: 20px;
}

.navbar-brand {
    font-size: 64px;
    text-shadow: 0px 0px 4px #eee;
}

.analyser-container-container {
    position: fixed;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
    mix-blend-mode: lighten;
}

.analyser-container {
    overflow: hidden;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.analyser-container .sizer {
    display: none;
}

.analyser-bar {
    display: inline-block;
    transition: height 0.1s;
    width: 3%;
    margin-left: 0.1667%;
    margin-right: 0.1667%;
    background-color: rgba(255, 255, 255, 0.2);
    border-radius: 5px;
}

@media(max-width: 767px) {
    .bottombar {
        background: #111 url("../img/bar.jpg") bottom center;
        box-shadow: 0px 0px 5px #111;
        position: fixed;
        bottom: 0px;
        left: 0px;
        right: 0px;
        height: 60px;
    }

    .songinfo img {
        width: 125px;
        height: 125px;
    }

    .songinfotextcol {
        height: 125px;
        width: 125px;
    }

}

@media(min-width: 768px) {
    .bottombar {
        background: #111 url("../img/bar.jpg") bottom center;
        box-shadow: 0px 0px 5px #333;
        position: fixed;
        bottom: 0px;
        left: 30px;
        right: 30px;
        height: 60px;
    }

    .songinfo img {
        width: 250px;
        height: 250px;
    }

    .songinfotextcol {
        height: 250px;
        width: 250px;
    }
}

.glowy {
    background: radial-gradient(#222, rgba(0,0,0,0));
    background-size: 500% 500%;

    -webkit-animation: glow 30s ease infinite;
    -moz-animation: glow 30s ease infinite;
    -o-animation: glow 30s ease infinite;
    animation: glow 30s ease infinite;

    mix-blend-mode: screen;
}

@-webkit-keyframes glow {
    0%{background-position:0% 18%}
    25%{background-position:0% 83%}
    50%{background-position:100% 83%}
    75%{background-position:100% 18%}
    100%{background-position:0% 18%}
}

@-moz-keyframes glow {
    0%{background-position:0% 18%}
    25%{background-position:0% 83%}
    50%{background-position:100% 83%}
    75%{background-position:100% 18%}
    100%{background-position:0% 18%}
}

@-o-keyframes glow {
    0%{background-position:0% 18%}
    25%{background-position:0% 83%}
    50%{background-position:100% 83%}
    75%{background-position:100% 18%}
    100%{background-position:0% 18%}
}

@keyframes glow {
    0%{background-position:0% 18%}
    25%{background-position:0% 83%}
    50%{background-position:100% 83%}
    75%{background-position:100% 18%}
    100%{background-position:0% 18%}
}

.glowy.angry {
    background: radial-gradient(#500, rgba(0,0,0,0));
    background-size: 500% 500%;

    -webkit-animation: glow 30s ease infinite;
    -moz-animation: glow 30s ease infinite;
    -o-animation: glow 30s ease infinite;
    animation: glow 30s ease infinite;

    mix-blend-mode: screen;
}

.glowy.happy {
    background: radial-gradient(#030, rgba(0,0,0,0));
    background-size: 500% 500%;

    -webkit-animation: glow 30s ease infinite;
    -moz-animation: glow 30s ease infinite;
    -o-animation: glow 30s ease infinite;
    animation: glow 30s ease infinite;

    mix-blend-mode: screen;
}

.glowy.sad {
    background: radial-gradient(#013, rgba(0,0,0,0));
    background-size: 500% 500%;

    -webkit-animation: glow 30s ease infinite;
    -moz-animation: glow 30s ease infinite;
    -o-animation: glow 30s ease infinite;
    animation: glow 30s ease infinite;

    mix-blend-mode: screen;
}

@media(max-width: 767px) {
    ul.nav.navbar-nav>li>a:hover {
        background-color: rgba(0,0,0,0) !important;
    }

    ul.nav.navbar-nav>li>a:focus {
        background-color: rgba(0,0,0,0) !important;
    }
}

.invisible {
    display: none;
}

